--- a/package.json
+++ b/package.json
@@ -9,11 +9,14 @@
   "author": "",
   "license": "ISC",
   "dependencies": {
+    "@fortawesome/fontawesome-free": "^5.15.2",
     "body-parser": "^1.19.0",
+    "bootstrap": "^4.6.0",
     "consolidate": "^0.16.0",
     "express": "^4.17.1",
     "express-handlebars": "^5.2.0",
-    "handlebars": "^4.7.6"
+    "handlebars": "^4.7.6",
+    "lodash": "^4.17.20"
   },
   "devDependencies": {
     "nodemon": "^2.0.7"
