--- a/package.json
+++ b/package.json
@@ -16,7 +16,9 @@
     "express": "^4.17.1",
     "express-handlebars": "^5.2.0",
     "handlebars": "^4.7.6",
-    "lodash": "^4.17.20"
+    "lodash": "^4.17.20",
+    "path": "^0.12.7",
+    "pg": "^8.5.1"
   },
   "devDependencies": {
     "nodemon": "^2.0.7"
