--- a/package.json
+++ b/package.json
@@ -13,9 +13,11 @@
     "body-parser": "^1.19.0",
     "bootstrap": "^4.6.0",
     "consolidate": "^0.16.0",
+    "cookie-parser": "^1.4.5",
     "express": "^4.17.1",
     "express-handlebars": "^5.2.0",
     "handlebars": "^4.7.6",
+    "jsonwebtoken": "^8.5.1",
     "lodash": "^4.17.20",
     "path": "^0.12.7",
     "pg": "^8.5.1"
