--- a/package.json
+++ b/package.json
@@ -18,11 +18,13 @@
     "express-handlebars": "^5.2.0",
     "handlebars": "^4.7.6",
     "jsonwebtoken": "^8.5.1",
+    "localstorage-polyfill": "^1.0.1",
     "lodash": "^4.17.20",
     "path": "^0.12.7",
     "pg": "^8.5.1"
   },
   "devDependencies": {
+    "node-localstorage": "^2.1.6",
     "nodemon": "^2.0.7"
   }
 }
