--- a/package.json
+++ b/package.json
@@ -21,7 +21,8 @@
     "localstorage-polyfill": "^1.0.1",
     "lodash": "^4.17.20",
     "path": "^0.12.7",
-    "pg": "^8.5.1"
+    "pg": "^8.5.1",
+    "store": "^2.0.12"
   },
   "devDependencies": {
     "node-localstorage": "^2.1.6",
